fazendo contador do pomodoro funcionar

--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pomodoro</title>
+  <title>POMODORO</title>
 </head>
 <body>
-  <h3>POMODORO</h3>
+  <h1>POMODORO</h1>
+  Qual o tempo do seu pomodoro?<br />
+  <br>
+  <input id="n1" type="number"/><br/>
+  <br>
+  Quantos Pomodoros?<br />
+  <br>
+  <input id ="n2" type="number"/>
+  <br>
+  <button onclick="mult()">Enviar</button>
+  <br><br>
+  <br><br>
+  a Quantidade de horas incial é de <span></span>
+  <br><br>
+  <div id="timer"></div>
 
-  <script src="calculatempo.js"></script>
+  
+
+  <script src="assets/script.js"></script>
 </body>
 </html>
